--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,17 @@
 theme: jekyll-theme-time-machine
 title: Welcome to Parker's Homepage!
 description: I hope you feel welcome :)
+Things to do
+Nothing | Something | Everything 
+------- | ----------|-----------
+A lot   |A little   |Definitely Not
+
+As someone famous said:
+
+>Hi how are you doing
+>Because I am doing well
+
+I'm sure one of these guys **bold** said that:
+
+https://www.biographyonline.net/people/famous-100.html
+[Biographyonline](www.biographyonline.net)
